fix carousel css on mobile view

--- a/src/components/CardOnCaroussel/CardOnCaroussel.css
+++ b/src/components/CardOnCaroussel/CardOnCaroussel.css
@@ -1,7 +1,7 @@
 .card-on-caroussel {
-  width: 60%;
-  max-width: 500px;
-  height: 250px;
+  width: 50%;
+  max-width: 300px;
+  height: 100px;
   background: #ffffffc7 0% 0% no-repeat padding-box;
   border-radius: 27px;
   margin-bottom: auto;
@@ -13,32 +13,35 @@
 
 .card-on-caroussel-title {
   text-align: center;
-  font: normal normal bold 24px/32px Roboto;
+  font: normal normal bold 12px/14px Roboto;
   letter-spacing: 0px;
   color: #000000;
   text-shadow: 0px 3px 6px #0000001a;
   text-transform: uppercase;
   /* margin-top: 30px; */
+  margin-bottom: 17px;
   opacity: 1;
 }
 
 .card-on-caroussel-description {
   text-align: center;
-  font: normal normal normal 19px/23px Roboto;
+  font: normal normal normal 10px/12px Roboto;
   letter-spacing: 0px;
   color: #292929;
   text-shadow: 0px 3px 6px #00000029;
   text-transform: capitalize;
   opacity: 1;
-  height: 120px;
+  height: 80px;
   display: justify;
+  /* padding-top: 10px; */
+  overflow: hidden;
 }
 
 .card-on-caroussel-button,
 .card-on-caroussel-button:hover,
 .card-on-caroussel-button:active {
-  width: 117px;
-  height: 38px;
+  width: 77px;
+  height: 30px !important;
   background: #4385f6 0% 0% no-repeat padding-box;
   border: #4385f6;
   border-radius: 12px;
@@ -53,15 +56,16 @@
       font: normal normal bold 14px/20px Roboto;
       
       margin-top: 5px;
+      margin-bottom: 7px;
     }
     .card-on-caroussel-description {
-      overflow-y: auto;
+      overflow-y:hidden;
       font: normal normal normal 12px/16px Roboto;
-  height: 70px;
+  height: 50px;
 
     }
     .card-on-caroussel {
-      height: 180px;
+      height: 80px;
       width: 90%;
       margin-bottom: auto;
       margin-top: auto;
@@ -74,7 +78,7 @@
 .card-on-caroussel-button:hover,
 .card-on-caroussel-button:active {
   width: 107px;
-  height: 28px;
+  height: 25px;
 }
 
 }
